feat: adicionado novas regras para rotas de tenants para middleware
